--- a/clientes-nuevo.html
+++ b/clientes-nuevo.html
@@ -107,10 +107,11 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Fecha de Nacimiento</label>
-                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha">
+                                            <input class="form-control input-sm" placeholder="" type="date" title="Fecha de Nacimiento" name="fecha" id="fecha">
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
+                                    
                                 </div>
                                 <div class="row">
                                     <div class="col-md-4">
@@ -166,12 +167,3 @@
         </div>
     </div>
 </div>
-
-
-<script>
-$(document).ready(function () {            
-    $('#fecha').datepicker({
-        format: "dd/mm/yyyy"
-    });
-});
-</script>
