--- a/clientes-ver.html
+++ b/clientes-ver.html
@@ -107,7 +107,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Fecha de Nacimiento</label>
-                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha" value="07/09/1988" disabled>
+                                            <input class="form-control input-sm" type="date" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha" value="07/09/1988" disabled>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
@@ -262,12 +262,3 @@
         </div>
     </div>
 </div>
-
-
-<script>
-$(document).ready(function () {            
-    $('#fecha').datepicker({
-        format: "dd/mm/yyyy"
-    });
-});
-</script>
