--- a/orden-servicios-nuevo.html
+++ b/orden-servicios-nuevo.html
@@ -72,7 +72,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Fecha de Nacimiento</label>
-                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha">
+                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha" type="date">
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
@@ -120,12 +120,3 @@
         </div>
     </div>
 </div>
-
-
-<script>
-$(document).ready(function () {            
-    $('#fecha').datepicker({
-        format: "dd/mm/yyyy"
-    });
-});
-</script>
