--- a/pacientes-editar.html
+++ b/pacientes-editar.html
@@ -61,7 +61,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Fecha de Nacimiento</label>
-                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha" value="07/09/1988">
+                                            <input class="form-control input-sm" placeholder="dd/mm/yyyy" type="date" title="Fecha de Nacimiento" name="fecha" id="fecha" value="07/09/1988">
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
@@ -124,12 +124,3 @@
         </div>
     </div>
 </div>
-
-
-<script>
-$(document).ready(function () {            
-    $('#fecha').datepicker({
-        format: "dd/mm/yyyy"
-    });
-});
-</script>
