--- a/pacientes-nuevo.html
+++ b/pacientes-nuevo.html
@@ -61,7 +61,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Fecha de Nacimiento</label>
-                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha">
+                                            <input class="form-control input-sm" placeholder="" type="date" title="Fecha de Nacimiento" name="fecha" id="fecha">
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
@@ -127,9 +127,3 @@
 
 
 <script>
-$(document).ready(function () {            
-    $('#fecha').datepicker({
-        format: "dd/mm/yyyy"
-    });
-});
-</script>
