--- a/servicios.html
+++ b/servicios.html
@@ -16,8 +16,8 @@
 						<div class="row">
                             <div class="col-md-8">
                                 <div class="form-group">
-									<label>N&deg; Doc. Identidad / Apellido Paterno / Apellido Materno / Nombres</label>
-									<input class="form-control input-sm" placeholder="" title="N&deg; Certificado / N&deg; Doc. Identidad / Apellido Paterno / Apellido Materno / Nombres" type="text">
+									<label>Nombre</label>
+									<input class="form-control input-sm" placeholder="" title="Nombre" type="text">
 									<span class="help-block"></span>
 								</div>
                             </div>
@@ -46,13 +46,9 @@
                         <thead>	
                             <tr>
                             	<th class="text-center">Sel.</th>
-                                <th class="text-center">N&uacute;mero de Documento</th>
                                 <th class="text-center">Nombres</th>
-                                <th class="text-center">Apellido Paterno</th>
-                                <th class="text-center">Apellido Materno</th>
-                                <th class="text-center">Tipo de Documento</th>
-                                <th class="text-center">Sexo</th>
-                                <th class="text-center">Estado</th>
+                                <th class="text-center">Precio</th>
+                                <th class="text-center">Activo</th>
                                 <th class="text-center">Acci&oacute;n</th>
                             </tr>
                         </thead>
@@ -61,45 +57,39 @@
                                 <td class="text-center">
 									<input type="radio" name="rdn_seleccion">
                                 </td>
-                                <td>70444183</td>
-                                <td>Miguel Angel</td> 
-                                <td>Aranya</td>
-								<td>Chaico</td>
-                                <td class="text-center">DNI</td>
-                                <td class="text-center">Masculino</td>
-                                <td class="text-center">Activo</td>
+                                <td>Desparasitaci&oacute;n</td>
+                                <td>75</td>
+                                <td class="text-center">
+                                    <input type="checkbox" checked>
+                                </td>
 								<td class="text-center">
-									<a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+									<a href="javascript:cargar('servicios-ver.html')" title="Ver Servicio"><i class="fa fa-eye iconEyeColor"></i></a>
 								</td>
                             </tr>
                             <tr class="even">
                                 <td class="text-center">
                                     <input type="radio" name="rdn_seleccion">
                                 </td>
-                                <td>07377183</td>
-                                <td>Victoria</td> 
-                                <td>Chaico</td>
-                                <td>Cabana</td>
-                                <td class="text-center">DNI</td>
-                                <td class="text-center">Femenino</td>
-                                <td class="text-center">Activo</td>
+                                <td>Baños</td>
+                                <td>70</td>
                                 <td class="text-center">
-                                    <a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+                                    <input type="checkbox" checked>
+                                </td>
+                                <td class="text-center">
+                                    <a href="javascript:cargar('servicios-ver.html')" title="Ver Servicio"><i class="fa fa-eye iconEyeColor"></i></a>
                                 </td>
                             </tr>
                             <tr class="odd">
                                 <td class="text-center">
                                     <input type="radio" name="rdn_seleccion">
                                 </td>
-                                <td>44758845</td>
-                                <td>Graziella</td> 
-                                <td>Villafuerte</td>
-                                <td>Le&oacute;n</td>
-                                <td class="text-center">DNI</td>
-                                <td class="text-center">Femenino</td>
-                                <td class="text-center">Activo</td>
+                                <td>Vacunas</td>
+                                <td>35</td>
                                 <td class="text-center">
-                                    <a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+                                    <input type="checkbox">
+                                </td>
+                                <td class="text-center">
+                                    <a href="javascript:cargar('servicios-ver.html')" title="Ver Servicio"><i class="fa fa-eye iconEyeColor"></i></a>
                                 </td>
                             </tr> 
                         </tbody>
