--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- Date Picker -->
-    <link rel="stylesheet" href="css/datepicker.css">
-
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -56,7 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <h4>&nbsp;&nbsp;<img src="image/susalud-logo-medium.png" alt="" class="img-rounded"><span class="naranja-susalud">Sistema de Veterinaria</span> &nbsp;<small>MI MASCOTA</small></h4>
+                <h4>&nbsp;&nbsp;<img src="" alt="" class="img-rounded"><span class="naranja-susalud">Sistema de Veterinaria</span> &nbsp;<small>MI MASCOTA</small></h4>
             </div>
             <ul class="nav navbar-top-links navbar-right latizator">
                 <li class="dropdown">
@@ -136,17 +133,12 @@
     <script src="js/plugins/morris/raphael.min.js"></script>
     <script src="js/plugins/morris/morris.min.js"></script>
 
-    <!-- Datepicker -->
-
     <!-- DataTables JavaScript -->
     <script src="js/plugins/dataTables/jquery.dataTables.js"></script>
     <script src="js/plugins/dataTables/dataTables.bootstrap.js"></script>
    
     <!-- Custom Theme JavaScript -->
     <script src="js/sb-admin-2.js"></script>
-    
-    <!-- Custom DatePicker -->
-    <script src="js/bootstrap-datepicker.js"></script>
     
     <!-- custom html -->
     <script type="text/javascript">
