--- a/servicios-editar.html
+++ b/servicios-editar.html
@@ -18,79 +18,97 @@
                             </div>
                             <div class="panel-body"> 
                                 <div class="row">
-                                    <div class="col-md-4">
+                                    <div class="col-md-6">
                                         <div class="form-group">
-                                            <label>Tipo Documento</label>
-                                            <select class="form-control input-sm" title="Tipo Documento" name="tipoDocumento">
-                                                <option>(Seleccione)</option>
-                                                <option selected>DNI</option>
-                                                <option>CE</option>
-                                                <option>LE</option>
-                                            </select>
+                                            <label>Nombre</label>
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombre" value="Baño">
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-6">
                                         <div class="form-group">
-                                            <label>N&uacute;mero Documento</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="N&uacute;mero Documento" name="nDocumento" value="70444183">
+                                            <label>Precio</label>
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Precio" value="35">
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                 </div>
 								<div class="row">
-									<div class="col-md-4">
+									<div class="col-md-12">
                                         <div class="form-group">
-                                            <label>Nombres</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombres" name="nombres" value="Miguel Angel">
+                                            <label>Observaci&oacute;n</label>
+                                            <textarea class="form-control input-sm" placeholder="" title="Observaci&oacute;n" row="3">Desparasitaci&oacute;n completa</textarea>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <strong>PRODUCTOS</strong>
+                            </div>
+                            <div class="panel-body"> 
+                                <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Apellido Paterno</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Apellido Paterno" name="apePaterno" value="Aranya">
-                                            <span class="help-block"></span>
+                                            <label>Buscar</label>
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" name="producto" title="Productos"/>
+                                                <span class="input-group-btn">
+                                                    <a href="#" data-toggle="modal" data-target="#modelProducto" title="Buscar Producto" class="btn btn-default" type="button">
+                                                        <i class="fa fa-search"></i>
+                                                    </a>
+                                                </span>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-2">
                                         <div class="form-group">
-                                            <label>Apellido Materno</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Apellido Materno" name="apeMaterno" value="Chaico">
+                                            <label></label>
+                                            <a href="#" class="btn btn-sm btn-primary btn-block" title="Agregar"><i class="fa fa-new"></i>&nbsp; AGREGAR</a>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Direcci&oacute;n</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Direcci&oacute;n" name="direccion" value="Av. La Paz 1359">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Fecha de Nacimiento</label>
-                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha" value="07/09/1988">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Tel&eacute;fono</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Tel&eacute;fono" name="telefono" value="986686182">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Email</label>
-                                            <div class="input-group input-group-sm">
-                                                <span class="input-group-addon" id="sizing-addon3">@</span>
-                                                <input type="text" class="form-control" placeholder="Correo electr&oacute;nico" aria-describedby="sizing-addon3" value="miguelaranya@gmail.com">
+                                    <div class="col-md-12">
+                                        <div class="panel panel-default">
+                                            <div class="panel-body">
+                                                <div class="table-responsive">
+                                                    <table class="table table-striped table-bordered table-hover" id="datable-grilla-bandeja-sol-usuario-ver">
+                                                        <thead>	
+                                                            <tr>
+                                                                <th class="text-center">C&oacute;d. Producto</th>
+                                                                <th class="text-center">Nombre Producto</th>
+                                                                <th class="text-center">Acci&oacute;n</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr class="odd">
+                                                                <td>Producto 1</td>
+                                                                <td>Producto 1</td>
+                                                                <td class="text-center">
+                                									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
+                                								</td>
+                                                            </tr>
+                                                            <tr class="even">
+                                                                <td>Producto 2</td>
+                                                                <td>Producto 2</td>
+                                                                <td class="text-center">
+                                									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
+                                								</td>
+                                                            </tr>
+                                                            <tr class="odd">
+                                                                <td>Producto 3</td>
+                                                                <td>Producto 3</td>
+                                                                <td class="text-center">
+                                									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
+                                								</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -120,12 +138,3 @@
         </div>
     </div>
 </div>
-
-
-<script>
-$(document).ready(function () {            
-    $('#fecha').datepicker({
-        format: "dd/mm/yyyy"
-    });
-});
-</script>
